# demoServer

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260619_0001_create_users_and_refresh_tokens_tables.py
app/: main.py
app/auth/: dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
app/core/: config.py  exceptions.py  security.py
app/db/: base.py  session.py
tests/: conftest.py  test_health.py  test_security.py
tests/integration/: test_auth_endpoints.py
tests/unit/: test_dependencies.py  test_repository.py  test_service.py
